--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <p class="banner-text">
                                 Новый формат в обучении, который дал <br> фантастические результаты, готов для тебя
                             </p>
-                            <p class="btn-dark">Получить права</p>
+                            <a href="#test-form" class="btn-dark popup-with-form">Получить права</a>
                             <p class="social-title">Наши соц. сети</p>
                             <div class="banner-social">
                                 <a href="#">
@@ -112,6 +112,12 @@
                     </div>
                 </div>
             </section>
+            <section class="curse margin padding">
+                <div class="container">
+                    <p class="title-xl">Наши курсы</p>
+                    <div class="curse-container"></div>
+                </div>
+            </section>
             <section class="achievements margin padding">
                 <div class="container">
                     <p class="title-xl">Наши успехи и достижения</p>
@@ -145,6 +151,127 @@
                                 учеников сдали экзамен<br> с первого раза
                             </p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="schedule margin padding">
+                <div class="container">
+                    <p class="title-xl">Расписание занятий</p>
+                    <div class="schedule-container">
+                        <div class="schedule-box">
+                            <div class="schedule-info-box">
+                                <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                <div class="schedule-info-text">
+                                    <p class="occupation calendar">Занятия:</p>
+                                    <p class="day">Понедельник, Среда</p>
+                                </div>
+                                <div class="schedule-info-text">
+                                    <p class="occupation start">Старт:</p>
+                                    <p class="day">Март</p>
+                                </div>
+                            </div>
+                            <div class="schedule-btn">
+                                <p class="places text-light">5 занятий</p>
+                                <a href="#" class="btn-white">Записаться</a>
+                            </div>
+                        </div>
+                        <div class="schedule-box">
+                            <div class="schedule-info-box">
+                                <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span></p>
+                                <div class="schedule-info-text">
+                                    <p class="occupation calendar">Занятия:</p>
+                                    <p class="day">Понедельник, Среда</p>
+                                </div>
+                                <div class="schedule-info-text">
+                                    <p class="occupation start">Старт:</p>
+                                    <p class="day">Март</p>
+                                </div>
+                            </div>
+                            <div class="schedule-btn">
+                                <a href="#" class="btn-white">Записаться</a>
+                            </div>
+                        </div>
+                        <div class="schedule-box">
+                            <div class="schedule-info-box">
+                                <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span></p>
+                                <div class="schedule-info-text">
+                                    <p class="occupation calendar">Занятия:</p>
+                                    <p class="day">Понедельник, Среда</p>
+                                </div>
+                                <div class="schedule-info-text">
+                                    <p class="occupation start">Старт:</p>
+                                    <p class="day">Март</p>
+                                </div>
+                            </div>
+                            <div class="schedule-btn">
+                                <a href="#" class="btn-white">Записаться</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="schedule-slider-mob single-item slick-slider">
+                        <div>
+                            <div class="schedule-box">
+                                <div class="schedule-info-box">
+                                    <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation calendar">Занятия:</p>
+                                        <p class="day">Понедельник, Среда</p>
+                                    </div>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation start">Старт:</p>
+                                        <p class="day">Март</p>
+                                    </div>
+                                </div>
+                                <div class="schedule-btn">
+                                    <p class="places text-light">5 занятий</p>
+                                    <a href="#" class="btn-white">Записаться</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="schedule-box">
+                                <div class="schedule-info-box">
+                                    <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation calendar">Занятия:</p>
+                                        <p class="day">Понедельник, Среда</p>
+                                    </div>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation start">Старт:</p>
+                                        <p class="day">Март</p>
+                                    </div>
+                                </div>
+                                <div class="schedule-btn">
+                                    <p class="places text-light">5 занятий</p>
+                                    <a href="#" class="btn-white">Записаться</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="schedule-box">
+                                <div class="schedule-info-box">
+                                    <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation calendar">Занятия:</p>
+                                        <p class="day">Понедельник, Среда</p>
+                                    </div>
+                                    <div class="schedule-info-text">
+                                        <p class="occupation start">Старт:</p>
+                                        <p class="day">Март</p>
+                                    </div>
+                                </div>
+                                <div class="schedule-btn">
+                                    <p class="places text-light">5 занятий</p>
+                                    <a href="#" class="btn-white">Записаться</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="schedule-map">
+                        <p class="schedule-map-title text-light">Адрес:</p>
+                        <p class="schedule-map-text text-light">
+                            г. Днепр, проспект Б.Хмельницкого (ул. Героев Сталинграда) 31д, 2 этаж (перекрёсток Титова и Г. Сталинграда)
+                        </p>
                     </div>
                 </div>
             </section>
@@ -259,6 +386,25 @@
                         </div>
                         <div>
                             <img src="img/teacher/teacher.png" class="teache-photo" alt="teacher">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="question margin padding">
+                <div class="container">
+                    <p class="title-xl">Самые часто задаваемые вопросы</p>
+                    <div class="question-container">
+                        <div class="tab-box">
+                            <p class="tab-title">Когда у вас набор?</p>
+                            <div class="tab-info">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptates, natus atque facilis necessitatibus perferendis fugiat ea cum aliquid excepturi consectetur dicta facere tempora nemo delectus omnis ut? Laudantium, hic!
+                            </div>
+                        </div>
+                        <div class="tab-box">
+                            <p class="tab-title">Когда у вас набор?</p>
+                            <div class="tab-info">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptates, natus atque facilis necessitatibus perferendis fugiat ea cum aliquid excepturi consectetur dicta facere tempora nemo delectus omnis ut? Laudantium, hic!
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -510,7 +656,7 @@
                         <div class="matherial-box">
                             <img src="img/matherial/matherial.png" alt="matherial">
                             <p class="title-sm">Тренируем Тесты по темам</p>
-                            <a class="#" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
+                            <a class="https://green-way.com.ua/test-pdd/ua" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
                             <p class="title-sm promokod">*с промокодом uca161052 скидка</p>
                         </div>
                         <div class="matherial-box">
@@ -568,6 +714,26 @@
                 </div>
             </div>
         </footer>
+    </div>
+
+
+    <div id="test-form" class="mfp-hide white-popup-block">
+        <p class="modal-title">Форма заявки</p>
+        <p class="modal-text text-light">Оставьте свои контакты и мы с вами свяжемся<br> для уточнения деталей</p>
+        <form method="POST">
+            <div class="input-box">
+                <input type="text" name="nameUser" placeholder="Имя" min="2" max="15" required>
+            </div>
+            <div class="input-box">
+                <input type="text" name="phoneUser" placeholder="Телефон" min="8" max="25" required>
+            </div>
+            <div class="btn-wrap">
+                <button type="submit">Отправить заявку</button>
+            </div>
+            <p class="politica-form">
+                Нажимая кнопку, я принимаю <a href="#">политику<br> конфиденциальности</a> и соглашаюсь<br> с обработкой персональных данных.
+            </p>
+        </form>
     </div>
 
     <script src="js/libs/jquery-3.4.1.min.js"></script>
