--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">Наши курсы</a>
+                                <p>Наши курсы</p>
                             </li>
                             <li>
-                                <a href="#">Расписание</a>
+                                <p>Расписание</p>
                             </li>
                             <li>
-                                <a href="#">Акции</a>
+                                <p>Акции</p>
                             </li>
                             <li>
-                                <a href="#">Отзывы</a>
+                                <p>Отзывы</p>
                             </li>
                             <li>
-                                <a href="#">Наша команда</a>
+                                <p>Наша команда</p>
                             </li>
                             <li>
-                                <a href="#">Контакты</a>
+                                <p>Контакты</p>
                             </li>
                         </ul>
                     </nav>
@@ -644,7 +644,7 @@
                     <div class="schedule-container">
                         <div class="schedule-box">
                             <div class="schedule-info-box">
-                                <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                <p class="schedule-title schedule-active">Утренняя группа <span>(10:00 – 11:30)</span></p>
                                 <div class="schedule-info-text">
                                     <p class="occupation calendar">Занятия:</p>
                                     <p class="day">Понедельник, Среда</p>
@@ -696,7 +696,7 @@
                         <div>
                             <div class="schedule-box">
                                 <div class="schedule-info-box">
-                                    <p class="schedule-title">Утренняя группа <span>(10:00 – 11:30)</span> <img src="img/icon/fire.png" alt="fire"></p>
+                                    <p class="schedule-title schedule-active">Утренняя группа <span>(10:00 – 11:30)</span></p>
                                     <div class="schedule-info-text">
                                         <p class="occupation calendar">Занятия:</p>
                                         <p class="day">Понедельник, Среда</p>
@@ -1164,18 +1164,18 @@
                         <div class="matherial-box">
                             <img src="img/matherial/matherial.png" alt="matherial">
                             <p class="title-sm">Тренируем Тесты по темам</p>
-                            <a class="https://green-way.com.ua/test-pdd/ua" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
+                            <a href="https://green-way.com.ua/test-pdd/ua" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
                             <p class="title-sm promokod">*с промокодом uca161052 скидка</p>
                         </div>
                         <div class="matherial-box">
                             <img src="img/matherial/matherial.png" alt="matherial">
                             <p class="title-sm">Тренируем Тесты по темам</p>
-                            <a class="#" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
+                            <a href="#" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
                         </div>
                         <div class="matherial-box">
                             <img src="img/matherial/matherial.png" alt="matherial">
                             <p class="title-sm">Тренируем Тесты по темам</p>
-                            <a class="#" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
+                            <a href="#" class="text-light">https://green-way.com.ua/test-pdd/ua</a>
                         </div>
                     </div>
                 </div>
